--- a/src/config/locale/messages/en/pages/video-effect-details.json
+++ b/src/config/locale/messages/en/pages/video-effect-details.json
@@ -40,21 +40,54 @@
             ]
           }
         },
+        "intro": {
+          "block": "tool-intro",
+          "title": "Create Intimate Moments With Pollo AI Kissing Video Generator",
+          "description": "With our AI Kissing Video Generator, you can effortlessly turn any two photos into a passionate kissing video, or transform the characters in your photos into more intimate and romantic characters features such as French kiss. Whether you want to recover a lost memory or create a surprise for your loved one, this AI kiss generator is your unique style and help!",
+          "images": [
+            { "src": "/imgs/cms/AI-Kissing_正常接吻_2.png" },
+            { "src": "/imgs/cms/AI-Kissing_法式接吻_2.png" },
+            { "src": "/imgs/cms/AI-Kissing_脸颊之吻_2.png" }
+          ]
+        },
         "features": {
           "block": "feature-split",
           "items": [
             {
-              "title": "Cinematic Quality",
-              "description": "Our AI ensures smooth transitions and realistic movements for a truly movie-like experience.",
-              "image": { "src": "/imgs/cms/AI-Kissing_咬嘴唇之吻_2.png" }
+              "title": "Lifelike AI Kissing & French Kiss Videos",
+              "description": "Experience the magic of our AI Kissing and French Kiss video tools. Transform static photos into romantic animations featuring smooth movements and authentic expressions, making it feel as though the kiss is happening in real life.",
+              "image": { "src": "/imgs/cms/AI-Kissing_法式接吻_2.png" },
+              "button": { "title": "Try AI Kissing Video Generator Now", "url": "#tool" }
             },
             {
-              "title": "Easy to Use",
-              "description": "Upload one or two photos, select the AI Kissing effect, and let the magic happen.",
-              "image": { "src": "/imgs/cms/AI-Kissing_法式接吻_2.png" },
-              "reverse": true
+              "title": "Versatile Pairing Options",
+              "description": "Whether you want to create a romantic moment between a couple, a playful peck between friends, or a passionate kiss between fictional characters, our AI kissing video generator accommodates all scenarios.",
+              "image": { "src": "/imgs/cms/AI-Kissing_正常接吻_2.png" },
+              "reverse": true,
+              "button": { "title": "Try AI Kissing Video Generator Now", "url": "#tool" }
             }
           ]
+        },
+        "how_to": {
+          "block": "how-to",
+          "title": "How to Use Pollo AI Kissing Video Generator?",
+          "description": "Create amazing kissing videos in just a few clicks.",
+          "video": { "src": "/videos/demo.mp4", "poster": "/imgs/cms/AI-Kissing_正常接吻_1.png" },
+          "steps": [
+            {
+              "title": "Step 1",
+              "description": "Start by selecting the kissing style you'd like to use for your kissing video."
+            },
+            {
+              "title": "Step 2",
+              "description": "Choose photos to generate a preview of the kissing video."
+            },
+            {
+              "title": "Step 3",
+              "description": "Confirm to create your video featuring the smooth kissing effect."
+            }
+          ],
+          "button": { "title": "Create AI Kissing Videos", "url": "#tool" }
         },
         "related_tools": {
           "block": "related-tools",
@@ -81,6 +114,59 @@
              {
               "title": "AI Muscle Generator",
               "description": "Add professional bodybuilder muscles to your photos.",
+              "image": { "src": "/imgs/cms/Muscle_肌肉展示_2.png" },
+              "url": "/video-effects/ai-muscle"
+            }
+          ]
+
+        },
+        "faq": {
+          "block": "faq",
+          "title": "FAQs",
+          "items": [
+            {
+              "question": "Is Pollo AI Kissing & French Kiss video generator?",
+              "answer": "Yes, our AI generator specializes in creating realistic kissing videos including French kiss styles."
+            },
+            {
+              "question": "How does Pollo AI's AI kissing video generator work?",
+              "answer": "We use advanced AI algorithms to analyze your photos and generate smooth, realistic animation frames between them."
+            },
+            {
+              "question": "What is the best AI kissing & French Kiss Video generator online?",
+              "answer": "Pollo AI offers the most realistic and high-quality results for intimate video generation."
+            },
+             {
+              "question": "Is AI kissing generator free?",
+              "answer": "Yes, we offer free trials for users to experience the magic of AI video generation."
+            },
+             {
+              "question": "Is the AI kissing video generator online safe to use?",
+              "answer": "Absolutely. We prioritize user privacy and delete all uploaded photos after processing."
+            }
+          ]
+        },
+        "more_tools": {
+          "block": "more-tools",
+          "title": "Try Other Popular Video Effects From Pollo AI",
+          "items": [
+            {
+              "title": "AI Hug",
+              "image": { "src": "/imgs/cms/Hug_拥抱_1.png" },
+              "url": "/video-effects/ai-hug"
+            },
+            {
+              "title": "AI Slow Motion",
+              "image": { "src": "/imgs/cms/AI-Kissing_正常接吻_2.png" },
+              "url": "/video-effects/ai-kissing"
+            },
+            {
+              "title": "AI Twerk Video Generator",
+              "image": { "src": "/imgs/cms/Twerk_扭臀舞_2.png" },
+              "url": "/video-effects/ai-twerk"
+            },
+            {
+              "title": "AI Muscle Generator",
               "image": { "src": "/imgs/cms/Muscle_肌肉展示_2.png" },
               "url": "/video-effects/ai-muscle"
             }
@@ -134,6 +220,70 @@
               "image": { "src": "/imgs/cms/AI-360-Rotation_肌肉展示_2.png" }
             }
           ]
+        },
+        "intro": {
+          "block": "tool-intro",
+          "title": "Get Ripped With AI Muscle Generator",
+          "description": "Instantly transform your physique with our AI Muscle Generator. Whether you want to see yourself as a bodybuilder or just add some definition, our AI creates realistic muscle overlays that blend perfectly with your original photo.",
+          "images": [
+            { "src": "/imgs/cms/Muscle_肌肉展示_2.png" },
+            { "src": "/imgs/cms/AI-360-Rotation_肌肉展示_2.png" }
+          ]
+        },
+        "how_to": {
+          "block": "how-to",
+          "title": "How to Use AI Muscle Generator?",
+          "description": "Get your dream physique in seconds.",
+          "video": { "src": "/videos/demo.mp4", "poster": "/imgs/cms/Muscle_肌肉展示_2.png" },
+          "steps": [
+            {
+              "title": "Step 1",
+              "description": "Upload a photo where your body is clearly visible."
+            },
+            {
+              "title": "Step 2",
+              "description": "Select the 'Bodybuilder' or 'Fitness' muscle style."
+            },
+            {
+              "title": "Step 3",
+              "description": "Click Generate to see your new muscular look."
+            }
+          ],
+          "button": { "title": "Add Muscles Now", "url": "#tool" }
+        },
+        "faq": {
+          "block": "faq",
+          "title": "FAQs",
+          "items": [
+            {
+              "question": "Is the muscle effect realistic?",
+              "answer": "Yes, our AI analyzes body geometry to ensure muscles look natural and anatomically correct."
+            },
+            {
+              "question": "Can I adjust the muscle size?",
+              "answer": "Currently we offer preset styles, but we are working on adjustable intensity controls."
+            },
+            {
+              "question": "Is it free to use?",
+              "answer": "Yes, you can try the AI Muscle Generator for free with daily credits."
+            }
+          ]
+        },
+        "more_tools": {
+          "block": "more-tools",
+          "title": "Try Other Popular Video Effects",
+          "items": [
+            {
+              "title": "AI Kissing Generator",
+              "image": { "src": "/imgs/cms/AI-Kissing_正常接吻_1.png" },
+              "url": "/video-effects/ai-kissing"
+            },
+            {
+              "title": "AI Twerk Dance",
+              "image": { "src": "/imgs/cms/Twerk_扭臀舞_2.png" },
+              "url": "/video-effects/ai-twerk"
+            }
+          ]
         }
       }
     }
@@ -181,6 +331,36 @@
               "title": "Summer Beach Vibes",
               "description": "Create realistic beach scenes with natural lighting and summer atmosphere.",
               "image": { "src": "/imgs/cms/AI-Dance-Generator_肚皮舞_2.png" }
+            }
+          ]
+        },
+        "intro": {
+          "block": "tool-intro",
+          "title": "Transform into a Beach Star",
+          "description": "Our AI Bikini Generator transforms your photos into stunning beach videos. Perfect for creating summery content or envisioning yourself in a tropical paradise.",
+          "images": [
+            { "src": "/imgs/cms/AI-Dance-Generator_肚皮舞_1.png" },
+            { "src": "/imgs/cms/AI-Dance-Generator_肚皮舞_2.png" }
+          ]
+        },
+        "faq": {
+          "block": "faq",
+          "title": "FAQs",
+          "items": [
+            {
+              "question": "Is the content safe?",
+              "answer": "Yes, we adhere to strict safety guidelines to perform generation."
+            }
+          ]
+        },
+        "more_tools": {
+          "block": "more-tools",
+          "title": "Try Other Popular Video Effects",
+          "items": [
+             {
+              "title": "AI Kissing Generator",
+              "image": { "src": "/imgs/cms/AI-Kissing_正常接吻_1.png" },
+              "url": "/video-effects/ai-kissing"
             }
           ]
         }
@@ -232,6 +412,36 @@
               "image": { "src": "/imgs/cms/Jiggle_抖动身体_1.png" }
             }
           ]
+        },
+        "intro": {
+          "block": "tool-intro",
+          "title": "Add Energy to Your Videos",
+          "description": "The AI Jiggle Effect adds fun, bouncy dynamics to your characters. It's perfect for creating entertaining social media content or just having a laugh.",
+          "images": [
+            { "src": "/imgs/cms/Jiggle_抖动身体_1.png" },
+            { "src": "/imgs/cms/Jiggle_抖动身体_2.png" }
+          ]
+        },
+        "faq": {
+          "block": "faq",
+          "title": "FAQs",
+          "items": [
+             {
+              "question": "How does it work?",
+              "answer": "Our AI tracks body movement and adds dynamic physics simulations."
+            }
+          ]
+        },
+        "more_tools": {
+          "block": "more-tools",
+          "title": "Try Other Popular Video Effects",
+          "items": [
+             {
+              "title": "AI Twerk Dance",
+              "image": { "src": "/imgs/cms/Twerk_扭臀舞_2.png" },
+              "url": "/video-effects/ai-twerk"
+            }
+          ]
         }
       }
     }
@@ -281,6 +491,36 @@
               "image": { "src": "/imgs/cms/Twerk_扭臀舞_2.png" }
             }
           ]
+        },
+        "intro": {
+          "block": "tool-intro",
+          "title": "Viral Twerk Dance Generator",
+          "description": "Make your photos dance! Our AI Twerk Generator creates high-energy, trending dance videos from static images. Join the trend and create viral content effortlessly.",
+          "images": [
+            { "src": "/imgs/cms/Twerk_扭臀舞_1.png" },
+            { "src": "/imgs/cms/Twerk_扭臀舞_2.png" }
+          ]
+        },
+        "faq": {
+          "block": "faq",
+          "title": "FAQs",
+          "items": [
+             {
+              "question": "Is it easy to use?",
+              "answer": "Yes, just upload a photo and our AI handles the rest."
+            }
+          ]
+        },
+        "more_tools": {
+          "block": "more-tools",
+          "title": "Try Other Popular Video Effects",
+          "items": [
+             {
+              "title": "AI Hug Generator",
+              "image": { "src": "/imgs/cms/Hug_拥抱_1.png" },
+              "url": "/video-effects/ai-hug"
+            }
+          ]
         }
       }
     }
@@ -311,6 +551,17 @@
               "image": { "src": "/imgs/cms/AI-Kissing_脸颊之吻_2.png" }
             }
           ]
+        },
+        "intro": {
+            "block": "tool-intro",
+            "title": "Gentle Cheek Kiss Moments",
+            "description": "Create sweet and affectionate cheek kiss videos suitable for friends and family.",
+            "images": [{ "src": "/imgs/cms/AI-Kissing_脸颊之吻_1.png" }]
+        },
+        "faq": {
+            "block": "faq",
+            "title": "FAQs",
+            "items": [{ "question": "Can I use vertical photos?", "answer": "Yes, our AI supports both portrait and landscape photos." }]
         }
       }
     }
@@ -341,6 +592,17 @@
               "image": { "src": "/imgs/cms/AI-Dance-Generator_肚皮舞_2.png" }
             }
           ]
+        },
+        "intro": {
+             "block": "tool-intro",
+             "title": "Pop Dance AI Generator",
+             "description": "Create fun pop dance videos instantly.",
+             "images": [{ "src": "/imgs/cms/AI-Dance-Generator_肚皮舞_1.png" }]
+        },
+        "faq": {
+             "block": "faq",
+             "title": "FAQs",
+             "items": [{ "question": "How fast is generation?", "answer": "Usually under 30 seconds." }]
         }
       }
     }
@@ -371,6 +633,12 @@
               "image": { "src": "/imgs/cms/AI-360-Rotation_肌肉展示_2.png" }
             }
           ]
+        },
+        "intro": {
+             "block": "tool-intro",
+             "title": "Extreme AI Muscle",
+             "description": "Take bodybuilding to the next level with Super Muscle AI.",
+             "images": [{ "src": "/imgs/cms/Muscle_肌肉展示_2.png" }]
         }
       }
     }
@@ -401,6 +669,12 @@
               "image": { "src": "/imgs/cms/Jiggle_抖动身体_1.png" }
             }
           ]
+        },
+        "intro": {
+             "block": "tool-intro",
+             "title": "Fun Jiggle Effects",
+             "description": "Add some bounce to your videos.",
+             "images": [{ "src": "/imgs/cms/Jiggle_抖动身体_1.png" }]
         }
       }
     }
@@ -431,6 +705,12 @@
               "image": { "src": "/imgs/cms/Twerk_扭臀舞_2.png" }
             }
           ]
+        },
+        "intro": {
+             "block": "tool-intro",
+             "title": "Twerk Master",
+             "description": "The ultimate twerk dance generator.",
+             "images": [{ "src": "/imgs/cms/Twerk_扭臀舞_1.png" }]
         }
       }
     }
@@ -478,6 +758,70 @@
               "title": "Emotional Connection",
               "description": "Create touching moments with realistic and warm embrace animations.",
               "image": { "src": "/imgs/cms/Hug_拥抱_2.png" }
+            }
+          ]
+        },
+        "intro": {
+          "block": "tool-intro",
+          "title": "Create Warm Hug Videos With Pollo AI",
+          "description": "With our AI Hug Video Generator, you can effortlessly turn any photos into a heartwarming hug video. Whether it's reuniting with a long-distance friend or creating a touching memory with a loved one, our AI technology ensures natural and emotional results.",
+          "images": [
+            { "src": "/imgs/cms/Hug_拥抱_1.png" },
+            { "src": "/imgs/cms/Hug_拥抱_2.png" }
+          ]
+        },
+        "how_to": {
+          "block": "how-to",
+          "title": "How to Use AI Hug Generator?",
+          "description": "Create amazing hug videos in just a few clicks.",
+          "video": { "src": "/videos/demo.mp4", "poster": "/imgs/cms/Hug_拥抱_1.png" },
+          "steps": [
+            {
+              "title": "Step 1",
+              "description": "Select the hug style you prefer (Warm, Reunion, etc)."
+            },
+            {
+              "title": "Step 2",
+              "description": "Upload the photos of the people you want to hug."
+            },
+            {
+              "title": "Step 3",
+              "description": "Click Create and wait for the magic to happen."
+            }
+          ],
+          "button": { "title": "Create AI Hug Videos", "url": "#tool" }
+        },
+        "faq": {
+          "block": "faq",
+          "title": "FAQs",
+          "items": [
+            {
+              "question": "Is AI Hug Generator free?",
+              "answer": "Yes, we offer free credits to try our AI hug generation tool."
+            },
+            {
+              "question": "Can I use my own photos?",
+              "answer": "Absolutely! You can upload any photo to generate a hug video."
+            },
+            {
+              "question": "How long does it take?",
+              "answer": "Most videos are generated within a few seconds to a minute."
+            }
+          ]
+        },
+        "more_tools": {
+          "block": "more-tools",
+          "title": "Try Other Popular Video Effects",
+          "items": [
+            {
+              "title": "AI Kissing Generator",
+              "image": { "src": "/imgs/cms/AI-Kissing_正常接吻_1.png" },
+              "url": "/video-effects/ai-kissing"
+            },
+            {
+              "title": "AI Twerk Dance",
+              "image": { "src": "/imgs/cms/Twerk_扭臀舞_2.png" },
+              "url": "/video-effects/ai-twerk"
             }
           ]
         }
@@ -529,6 +873,17 @@
               "image": { "src": "/imgs/cms/AI-360-Rotation_肌肉展示_2.png" }
             }
           ]
+        },
+        "intro": {
+             "block": "tool-intro",
+             "title": "Cinematic AI 360 Rotation",
+             "description": "Create stunning 360-degree rotation videos for characters and products.",
+             "images": [{ "src": "/imgs/cms/AI-360-Rotation_肌肉展示_1.png" }]
+        },
+        "faq": {
+             "block": "faq",
+             "title": "FAQs",
+             "items": [{ "question": "Does it work on objects?", "answer": "Yes, it works great for product showcases." }]
         }
       }
     }
@@ -578,6 +933,17 @@
               "image": { "src": "/imgs/features/landing-page.png" }
             }
           ]
+        },
+        "intro": {
+             "block": "tool-intro",
+             "title": "Dramatic Earth Zoom",
+             "description": "Create Google Earth-style zoom videos instantly.",
+             "images": [{ "src": "/imgs/bg/tree.jpg" }]
+        },
+        "faq": {
+             "block": "faq",
+             "title": "FAQs",
+             "items": [{ "question": "What is the resolution?", "answer": "We support up to 4K resolution output." }]
         }
       }
     }
