修复工具页展示问题

--- a/src/config/locale/messages/en/pages/video-effect-details.json
+++ b/src/config/locale/messages/en/pages/video-effect-details.json
@@ -42,7 +42,7 @@
         },
         "intro": {
           "block": "tool-intro",
-          "title": "Create Intimate Moments With Pollo AI Kissing Video Generator",
+          "title": "Create Intimate Moments With 1PhotoAI Kissing Video Generator",
           "description": "With our AI Kissing Video Generator, you can effortlessly turn any two photos into a passionate kissing video, or transform the characters in your photos into more intimate and romantic characters features such as French kiss. Whether you want to recover a lost memory or create a surprise for your loved one, this AI kiss generator is your unique style and help!",
           "images": [
             { "src": "/imgs/cms/AI-Kissing_正常接吻_2.png" },
@@ -70,7 +70,7 @@
         },
         "how_to": {
           "block": "how-to",
-          "title": "How to Use Pollo AI Kissing Video Generator?",
+          "title": "How to Use 1PhotoAI Kissing Video Generator?",
           "description": "Create amazing kissing videos in just a few clicks.",
           "video": { "src": "/videos/demo.mp4", "poster": "/imgs/cms/AI-Kissing_正常接吻_1.png" },
           "steps": [
@@ -125,16 +125,16 @@
           "title": "FAQs",
           "items": [
             {
-              "question": "Is Pollo AI Kissing & French Kiss video generator?",
+              "question": "Is 1PhotoAI Kissing & French Kiss video generator?",
               "answer": "Yes, our AI generator specializes in creating realistic kissing videos including French kiss styles."
             },
             {
-              "question": "How does Pollo AI's AI kissing video generator work?",
+              "question": "How does 1PhotoAI's AI kissing video generator work?",
               "answer": "We use advanced AI algorithms to analyze your photos and generate smooth, realistic animation frames between them."
             },
             {
               "question": "What is the best AI kissing & French Kiss Video generator online?",
-              "answer": "Pollo AI offers the most realistic and high-quality results for intimate video generation."
+              "answer": "1PhotoAI offers the most realistic and high-quality results for intimate video generation."
             },
              {
               "question": "Is AI kissing generator free?",
@@ -148,7 +148,7 @@
         },
         "more_tools": {
           "block": "more-tools",
-          "title": "Try Other Popular Video Effects From Pollo AI",
+          "title": "Try Other Popular Video Effects From 1PhotoAI",
           "items": [
             {
               "title": "AI Hug",
@@ -763,7 +763,7 @@
         },
         "intro": {
           "block": "tool-intro",
-          "title": "Create Warm Hug Videos With Pollo AI",
+          "title": "Create Warm Hug Videos With 1PhotoAI",
           "description": "With our AI Hug Video Generator, you can effortlessly turn any photos into a heartwarming hug video. Whether it's reuniting with a long-distance friend or creating a touching memory with a loved one, our AI technology ensures natural and emotional results.",
           "images": [
             { "src": "/imgs/cms/Hug_拥抱_1.png" },
